# Vision-Por-Computador-2-y-3

./: README.md  combinaciones.csv
ParcialC2/: CMakeLists.txt  main.cpp
Taller/: CMakeLists.txt  main.cpp
